fixed layout issue

--- a/styles/main_v2.css
+++ b/styles/main_v2.css
@@ -194,6 +194,7 @@ line-height: 21.6px;
 div.buttons {
     min-height: 36px;
     margin-bottom: 16px;
+    float:left;
 }
 
 div#api > div.buttons:first-child {
